# fmind-ai-assistant

./: .env.sample  .gitignore  Dockerfile  LICENSE.txt  README.md  app.py  fmind-ai-assistant.code-workspace  justfile  pyproject.toml  requirements-dev.txt  requirements.txt
files/: linkedin.md
tasks/: __init__.py  app.just  check.just  checks.py  clean.just  clean.py  cleans.py  containers.py  docker.just  docker.py  format.just  formats.py  install.just  install.py  installs.py  package.just  runs.py
