# https://docs.astral.sh/uv/reference/settings/
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# PROJECT

[project]
name = "fmind-ai-assistant"
version = "4.1.0"
description = "Answer questions about my background in natural language."
authors = [{ name = "Médéric HURIER", email = "github@fmind.dev" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.13"
dependencies = ["google-genai>=1.8.0", "gradio>=5.23.1"]

# DEPENDENCIES

[dependency-groups]
dev = ["ipykernel>=6.29.5", "mypy>=1.15.0", "ruff>=0.11.2", "rust-just>=1.40.0"]

# TOOLS

[tool.uv]
package = false

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
fix = true
indent-width = 4
line-length = 100
target-version = "py313"
